@@ -1,12 +1,14 @@
 0.15.0 (trunk):
 * Name.domain_name has been renamed to Name.t and is now abstract
 * Name.domain_name_to_string has been renamed to Name.to_string
-* Name.string_to_domain_name has been renamed to Name.of_string
+* Name.string_to_domain_name has been deprecated for Name.of_string
 * Name.parse_name has been renamed to Name.parse
 * Name.marshal_name has been renamed to Name.marshal
 * Name.hashcons_charstring has been renamed to Name.hashcons_string
 * Name.hashcons_domainname has been renamed to Name.hashcons
-* Name.for_reverse now accepts a V4/V6 Ipaddr.t and we require >= ipaddr.2.6.0
+* Name.for_reverse has been replaced by Name.of_ipaddr
+* Name.of_ipaddr accepts a Ipaddr.t and produces a name suitable for reverse DNS
+* We now require >= ipaddr.2.6.0 to support Name.of_ipaddr
 
 0.14.1 (2015-03-29):
 * Reduce namespace pollution in `name.ml` to avoid breaking with Cstruct 1.6.0+.
